--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-url: "https://pair-code.github.io"
-baseurl: "/datacardsplaybook"
+url: "https://j143.github.io"
+baseurl: "/playbook"
 title: "Data Cards Playbook"
